Updated Occupation Icons + text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Hi, I'm Joyce. Nice to meet you.</h1>
         <p>I'm a rising senior studying computer science at Hunter College. I was born
           and raised in Brooklyn, New York and I'm currently interested in pursuing a career
-          in the tech industry - specifically as a full stack web developer. I'm eager to learn
+          in the tech industry - specifically as a full-stack web developer. I'm eager to learn
           and I'm not afraid of failure. In fact, I welcome it.
         </p>
         <div class="quote"><em>"Ever tried. Ever failed. No matter. Try again. Fail again. Fail better."</em></div>
@@ -41,16 +41,52 @@
       </div>
     </div>
 
-    <div class="occupations_container">
-      <div class="occ_contain">
+    <div class="occupations_bg_container">
+      <div class="occupations_container">
         <div class="occupation">
-          <h1>Artist</h1>
+          <img src="img/artist.png" alt="Image of Artist" class="occupation_icons">
+          <h1>Artist & Designer</h1>
+          <p>I'm passionate about creating things. I find that passion to be increasing everyday. </p>
+          <p class="highlight_section">Things I enjoy creating:</p>
+          <p class="list_horizontal">Artworks, Animations, Games, Websites</p>
+          <p class="highlight_section2">Art & Design Tools:</p>
+          <ul>
+            <li>Paint Tool Sai</li>
+            <li>Piskel</li>
+            <li>Figma</li>
+            <li>Sony Vegas Pro</li>
+          </ul>
         </div>
         <div class="occupation">
-          <h1>Coder</h1>
+          <img src="img/programmer.png" alt="Image of Programmer" class="occupation_icons">
+          <h1>Programmer</h1>
+          <p>I love bringing my ideas to life through coding. Programming is something magical.</p>
+          <p class="highlight_section">Languages I know:</p>
+          <p class="list_horizontal">HTML, CSS, JavaScript, Python, C++, Java</p>
+          <p class="highlight_section2">Dev Tools:</p>
+          <ul>
+            <li>Atom</li>
+            <li>Visual Studio Code</li>
+            <li>Github</li>
+            <li>Eclipse</li>
+          </ul>
         </div>
         <div class="occupation">
-          <h1>Listener</h1>
+          <img src="img/student.png" alt="Image of Student" class="occupation_icons">
+          <h1>Student</h1>
+          <p>I welcome constructive criticism. I'm always eager to better myself both as a person and my skills.
+          The sky is the limit.</p>
+          <p class="highlight_section">Experiences that changed me: </p>
+          <ul>
+            <li>People, Programs, Life</li>
+          </ul>
+          <p class="highlight_section2">Programs:</p>
+          <ul>
+            <li>SWE EverUp Micro-Credential Program</li>
+            <li>Break Through Tech AI</li>
+            <li>CodePath</li>
+            <li></li>
+          </ul>
         </div>
       </div>
     </div>
