--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
     <nav class="links">
       <div class="name">Joyce Zhang</div>
-      <a href="#" class="link1">About</a>
-      <a href="#" class="link2">Projects</a>
+      <a href="#_profile" class="link1">About</a>
+      <a href="#" class="link2">Work</a>
       <a href="#" class="link3">Contact</a>
     </nav>
   </header>
@@ -29,7 +29,7 @@
     </div>
     <div class="platform_container"></div>
     <div class="aboutme_container">
-      <div class="intro">
+      <div id="_profile" class="intro">
         <h1>Hi, I'm Joyce. Nice to meet you.</h1>
         <p>I'm a rising senior studying computer science at Hunter College. I was born
           and raised in Brooklyn, New York and I'm currently interested in pursuing a career
@@ -47,6 +47,8 @@
           <img src="img/artist.png" alt="Image of Artist" class="occupation_icons">
           <h1>Artist & Designer</h1>
           <p>I'm passionate about creating things. I find that passion to be increasing everyday. </p>
+          <div class="button"><a href="#">Learn More</a></div>
+          <!--
           <p class="highlight_section">Things I enjoy creating:</p>
           <p class="list_horizontal">Artworks, Animations, Games, Websites</p>
           <p class="highlight_section2">Art & Design Tools:</p>
@@ -56,11 +58,14 @@
             <li>Figma</li>
             <li>Sony Vegas Pro</li>
           </ul>
+          -->
         </div>
         <div class="occupation">
           <img src="img/programmer.png" alt="Image of Programmer" class="occupation_icons">
           <h1>Programmer</h1>
           <p>I love bringing my ideas to life through coding. Programming is something magical.</p>
+          <div class="button"><a href="#">Learn More</a></div>
+          <!--
           <p class="highlight_section">Languages I know:</p>
           <p class="list_horizontal">HTML, CSS, JavaScript, Python, C++, Java</p>
           <p class="highlight_section2">Dev Tools:</p>
@@ -70,12 +75,15 @@
             <li>Github</li>
             <li>Eclipse</li>
           </ul>
+          -->
         </div>
         <div class="occupation">
           <img src="img/student.png" alt="Image of Student" class="occupation_icons">
           <h1>Student</h1>
           <p>I welcome constructive criticism. I'm always eager to better myself both as a person and my skills.
           The sky is the limit.</p>
+          <div class="button"><a href="#">Learn More</a></div>
+          <!--
           <p class="highlight_section">Experiences that changed me: </p>
           <ul>
             <li>People, Programs, Life</li>
@@ -87,9 +95,15 @@
             <li>CodePath</li>
             <li></li>
           </ul>
+         -->
         </div>
       </div>
     </div>
 
   </body>
+  <footer>
+    <div class="footer_container">
+
+    </div>
+  </footer>
 </html>
