Added Work Section + sample images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <body>
     <div class="home_welcome">
-      <h1>Aspiring full-stack developer </h1>
+      <h1>Aspiring full-stack web developer </h1>
       <h3>I have a love and hate relationship with coding</h3>
     </div>
     <div class="animation_container">
@@ -99,11 +99,33 @@
         </div>
       </div>
     </div>
+    <div class="work_container">
+      <h1>My Work</h1>
+      <p>Here are a few projects that I have been working on.</p>
+      <div class="projects_container">
+        <div class="works">
+          <div class="img">
+            <img src="img/sample_image.jpg" alt="img" class="img1">
+          </div>
+          <div class="img">
+            <img src="img/sample_image.jpg" alt="img" class="img1">
+          </div>
+          <div class="img">
+            <img src="img/sample_image.jpg" alt="img" class="img1">
+          </div>
+        </div>
+      </div>
+      <div class="projects_container">
+        <div class="works">
 
+        </div>
+      </div>
+      <div class="projects_container">
+        <div class="works">
+
+        </div>
+      </div>
+  </div>
   </body>
-  <footer>
-    <div class="footer_container">
-
-    </div>
-  </footer>
+  <footer></footer>
 </html>
