Added first project (2D Java Game)

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <header>
     <nav class="links">
-      <div class="name">Joyce Zhang</div>
+      <a href="#"><div class="name">Joyce Zhang</div><a>
       <a href="#_profile" class="link1">About</a>
-      <a href="#" class="link2">Work</a>
+      <a href="#_projects" class="link2">Work</a>
       <a href="#" class="link3">Contact</a>
     </nav>
   </header>
@@ -99,19 +99,23 @@
         </div>
       </div>
     </div>
-    <div class="work_container">
+    <div id="_projects" class="work_container">
       <h1>My Work</h1>
       <p>Here are a few projects that I have been working on.</p>
       <div class="projects_container">
         <div class="works">
           <div class="img">
-            <img src="img/sample_image.jpg" alt="img" class="img1">
+            <img src="img/java_game.png" alt="2DGame" class="img1">
+            <h2>2D Java Game</h2>
+            <a href="https://github.com/JZBlank/My2DGame" target="_blank" class="work_link">More Info</a>
           </div>
           <div class="img">
             <img src="img/sample_image.jpg" alt="img" class="img1">
+            <h2>Empty</h2>
           </div>
           <div class="img">
             <img src="img/sample_image.jpg" alt="img" class="img1">
+            <h2>Empty</h2>
           </div>
         </div>
       </div>
