--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     <div id="_projects" class="work_container">
       <h1>My Work</h1>
-      <p>Here are a few projects that I have been working on.</p>
+      <p>Here is a collection of projects that I have worked on.</p>
       <div class="projects_container">
         <div class="works">
           <div class="img">
@@ -126,10 +126,17 @@
       </div>
       <div class="projects_container">
         <div class="works">
-
         </div>
       </div>
   </div>
   </body>
-  <footer></footer>
+  <footer class="footer_container">
+    <div class="text">Created by Joyce Zhang 2022</div>
+      <div class="icons">
+        <img src="img/github.png" alt="Github Icon">
+        <img src="img/linkedin.png" alt="LinkedIn Icon">
+        <img src="img/email.png" alt="Email Icon">
+      </div>
+  
+  </footer>
 </html>
