Started adding information to artist section

--- a/index.html
+++ b/index.html
@@ -47,18 +47,7 @@
           <img src="img/artist.png" alt="Image of Artist" class="occupation_icons">
           <h1>Artist & Designer</h1>
           <p>I'm passionate about creating things. I find that passion to be increasing everyday. </p>
-          <div class="button"><a href="#">Learn More</a></div>
-          <!--
-          <p class="highlight_section">Things I enjoy creating:</p>
-          <p class="list_horizontal">Artworks, Animations, Games, Websites</p>
-          <p class="highlight_section2">Art & Design Tools:</p>
-          <ul>
-            <li>Paint Tool Sai</li>
-            <li>Piskel</li>
-            <li>Figma</li>
-            <li>Sony Vegas Pro</li>
-          </ul>
-          -->
+          <div class="button"><a href="#_artist_info">Learn More</a></div>
         </div>
         <div class="occupation">
           <img src="img/programmer.png" alt="Image of Programmer" class="occupation_icons">
@@ -99,6 +88,16 @@
         </div>
       </div>
     </div>
+    <!-- INFORMATION_SECTION -->
+    <div class="occupationInfo_bg_container">
+      <div class="occupationInfo_container">
+        <h1 id="_artist_info" class="aboutTitle">Artist & Designer</h1>
+        <p>Things I enjoy creating: Artworks, Animations, Games, Websites</p>
+        <p>Art & Design Tools: Paint Tool Sai, Piskel, Figma, Sony Vegas Pro</p>
+      </div>
+    </div>
+
+    <!-- WORK GALLERY -->
     <div id="_projects" class="work_container">
       <h1>My Work</h1>
       <p>Here is a collection of projects that I have worked on.</p>
@@ -119,15 +118,6 @@
           </div>
         </div>
       </div>
-      <div class="projects_container">
-        <div class="works">
-
-        </div>
-      </div>
-      <div class="projects_container">
-        <div class="works">
-        </div>
-      </div>
   </div>
   </body>
   <footer class="footer_container">
@@ -137,6 +127,6 @@
         <img src="img/linkedin.png" alt="LinkedIn Icon">
         <img src="img/email.png" alt="Email Icon">
       </div>
-  
+
   </footer>
 </html>
