updated projects + added href to links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joyce Zhang</title>
     <link rel="stylesheet" href="style.css">
 
@@ -9,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300&family=Montserrat&display=swap" rel="stylesheet">
+
 
   </head>
   <header>
@@ -21,12 +23,12 @@
   </header>
   <body>
     <div class="home_welcome">
-      <h1>Aspiring full-stack web developer </h1>
+      <h1>Aspiring full-stack web developer! </h1>
+      <!--<div class="animation_container"></div>-->
       <h3>I have a love and hate relationship with coding</h3>
     </div>
-    <div class="animation_container">
 
-    </div>
+
     <div class="platform_container"></div>
     <div class="aboutme_container">
       <div id="_profile" class="intro">
@@ -100,33 +102,31 @@
     <!-- WORK GALLERY -->
     <div id="_projects" class="work_container">
       <h1>My Work</h1>
-      <p>Here is a collection of projects that I have worked on.</p>
+      <p>Projects that I have been working on:</p>
       <div class="projects_container">
         <div class="works">
           <div class="img">
-            <img src="img/java_game.png" alt="2DGame" class="img1">
             <h2>2D Java Game</h2>
             <a href="https://github.com/JZBlank/My2DGame" target="_blank" class="work_link">More Info</a>
+            <img src="img/java_game.png" alt="2DGame" class="img1">
+          </div>
+          <div class="img">
+            <a href="https://jzblank.github.io/microcredential/project1_Zhang/project1.html" target="_blank">Visit Page</a>
+            <img src="img/climate_change_website.png" alt="img" class="img1">
           </div>
           <div class="img">
             <img src="img/sample_image.jpg" alt="img" class="img1">
-            <h2>Empty</h2>
-          </div>
-          <div class="img">
-            <img src="img/sample_image.jpg" alt="img" class="img1">
-            <h2>Empty</h2>
           </div>
         </div>
       </div>
   </div>
   </body>
   <footer class="footer_container">
-    <div class="text">Created by Joyce Zhang 2022</div>
       <div class="icons">
-        <img src="img/github.png" alt="Github Icon">
-        <img src="img/linkedin.png" alt="LinkedIn Icon">
-        <img src="img/email.png" alt="Email Icon">
+        <a href="https://github.com/JZBlank" target="_blank"><img src="img/github.png" alt="Github Icon"></a>
+        <a href="https://www.linkedin.com/in/joyce-zhang-a93637197/" target="_blank"><img src="img/linkedin.png" alt="LinkedIn Icon"></a>
+        <a href="mailto:joycezhang2065@gmail.com" target="_blank"><img src="img/email.png" alt="Email Icon"></a>
       </div>
-
+      <div class="text">@Created and designed by Joyce Zhang 2022</div>
   </footer>
 </html>
