added duck + animation + message

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       <h3>I have a love and hate relationship with coding</h3>
     </div>
 
+    <div class="chicken_container">
+      <img src="img/chicken.png" alt="Chicken">
+    </div>
+    <div class="message">
+      <div class="duck_message">Hi there</div>
+    </div>
+
 
     <div class="platform_container"></div>
     <div class="aboutme_container">
