updated animation for duck + text

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <header>
     <nav class="links">
       <a href="#"><div class="name">Joyce Zhang</div><a>
-      <a href="#_profile" class="link1">About</a>
-      <a href="#_projects" class="link2">Work</a>
-      <a href="#" class="link3">Contact</a>
+      <a href="#_profile" class="link1">about</a>
+      <a href="#_projects" class="link2">work</a>
+      <a href="#" class="link3">contact</a>
     </nav>
   </header>
   <body>
@@ -33,12 +33,12 @@
     </div>
 
     <div class="chicken_container">
-        <img src="img/chicken.png" alt="Chicken">
-    </div>
-    <div class="message">
-      <div class="duck_message">loading...</div>
-      <div class="click_message">click me!</div>
+      <img src="img/chicken.png" alt="Chicken">
+      <div class="message">
+        <div class="duck_message">loading...</div>
+        <div class="click_message">click me!</div>
       </div>
+    </div>
     </div>
 
 
