--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
       </div>
     </div>
 
-    <div class="chicken_container">
-      <img src="img/chicken.png" alt="Chicken">
+    <div class="duck_container">
+      <a onclick="play_audio();">
+        <img src="img/duck.png" alt="Duck">
+      </a>
+
       <div class="message">
         <div class="duck_message">loading...</div>
         <div class="click_message">click me!</div>
