changed entire ui of page
Dark Theme!

--- a/index.html
+++ b/index.html
@@ -24,30 +24,32 @@
     </nav>
   </header>
   <body>
-    <div class="home_welcome">
-      <h1>Aspiring full-stack web developer! </h1>
-      <!--<div class="animation_container"></div>-->
-      <div class="subtitle_container">
-        <h3>I have a love and hate relationship with coding</h3>
+    <div class="welcome_bg">
+      <div class="home_welcome">
+        <h1>Welcome to my website</h1>
+        <!--<div class="animation_container"></div>-->
+        <div class="subtitle_container">
+          <h3>I have a love and hate relationship with coding.</h3>
+        </div>
+      </div>
+
+      <div class="duck_container">
+        <a onclick="play_audio();">
+          <img src="img/duck.png" alt="Duck">
+        </a>
+
+        <div class="message">
+          <div class="duck_message">loading...</div>
+          <div class="click_message">click me!</div>
+        </div>
+      </div>
+
+      <div id="load_bar">
+        <div id="progress_bar">0%</div>
       </div>
     </div>
 
-    <div class="duck_container">
-      <a onclick="play_audio();">
-        <img src="img/duck.png" alt="Duck">
-      </a>
 
-      <div class="message">
-        <div class="duck_message">loading...</div>
-        <div class="click_message">click me!</div>
-      </div>
-    </div>
-    </div>
-
-
-    <div id="load_bar">
-      <div id="progress_bar">0%</div>
-    </div>
 
     <div class="aboutme_container">
       <div id="_profile" class="intro">
@@ -61,6 +63,7 @@
         <h4>— Samuel Beckett</h4>
       </div>
     </div>
+    <div class="orange_container"></div>
 
     <div class="occupations_bg_container">
       <div class="occupations_container">
