added line under text

--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
       </div>
     </div>
 
-
-
     <div class="aboutme_container">
       <div id="_profile" class="intro">
         <h1>Hi, I'm Joyce. Nice to meet you.</h1>
+        <div class="line"></div>
         <p>I'm a rising senior studying computer science at Hunter College. I was born
           and raised in Brooklyn, New York and I'm currently interested in pursuing a career
           in the tech industry - specifically as a full-stack web developer. I'm eager to learn
